--- a/Solution/FastWorkspace.Client/wwwroot/index.html
+++ b/Solution/FastWorkspace.Client/wwwroot/index.html
@@ -13,7 +13,7 @@
         <link href="_content/MudBlazor/MudBlazor.min.css" rel="stylesheet" />
     </head>
     <body>
-        <div id="app">Loading...</div>
+        <div id="app"></div>
         <div id="blazor-error-ui">
             An unhandled error has occurred.
             <a href="" class="reload">Reload</a>
