--- a/Solution/FastWorkspace.Client/wwwroot/index.html
+++ b/Solution/FastWorkspace.Client/wwwroot/index.html
@@ -1,26 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <base href="/" />
-        <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover" />
-        
-        <title>Fast Workspace</title>
-        
 
-        <link href="css/app.css" rel="stylesheet" />
-        <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
-        <link href="_content/MudBlazor/MudBlazor.min.css" rel="stylesheet" />
-    </head>
-    <body>
-        <div id="app"></div>
-        <div id="blazor-error-ui">
-            An unhandled error has occurred.
-            <a href="" class="reload">Reload</a>
-            <a class="dismiss">🗙</a>
-        </div>
+<head>
+    <base href="/" />
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover" />
 
-        <script src="_content/MudBlazor/MudBlazor.min.js"></script>
-        <script src="_framework/blazor.webview.js" autostart="false"></script>
-    </body>
+    <title>Fast Workspace</title>
+
+    <link href="css/app.css" rel="stylesheet" />
+    <link href="css/highlight.min.css" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" /><!-- todo: remove this and locally import it -->
+    <link href="_content/MudBlazor/MudBlazor.min.css" rel="stylesheet" />
+</head>
+<body>
+    <div id="app"></div>
+
+    <div id="blazor-error-ui">
+        An unhandled error has occurred.
+        <a href="" class="reload">Reload</a>
+        <a class="dismiss">🗙</a>
+    </div>
+
+    <script src="js/highlight.min.js"></script>
+    <script src="js/app.js"></script>
+    <script src="_content/MudBlazor/MudBlazor.min.js"></script>
+    <script src="_framework/blazor.webview.js" autostart="false"></script>
+</body>
+
 </html>
