move locales + add script generator

--- a/Solution/FastWorkspace.Client/wwwroot/index.html
+++ b/Solution/FastWorkspace.Client/wwwroot/index.html
@@ -9,7 +9,7 @@
     <title>Fast Workspace</title>
 
     <link href="css/app.css" rel="stylesheet" />
-    <link href="css/highlight.min.css" rel="stylesheet" /><!-- todo: add a better dark theme -->
+    <link href="css/highlight.min.css" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" /><!-- todo: remove this and locally import it -->
     <link href="_content/MudBlazor/MudBlazor.min.css" rel="stylesheet" />
 </head>
