--- a/Solution/ActivityLauncher.Client/wwwroot/index.html
+++ b/Solution/ActivityLauncher.Client/wwwroot/index.html
@@ -4,15 +4,13 @@
 <head>
     <base href="/" />
     <meta charset="utf-8" />
-    <meta name="viewport"
-        content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover" />
 
-    <title>Fast Activity</title>
+    <title>Activity Launcher For Windows</title>
 
     <link href="css/app.css" rel="stylesheet" />
     <link href="css/highlight.min.css" rel="stylesheet" />
-    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
-    <!-- todo: remove this and locally import it -->
+    <link href="css/roboto-font.css" rel="stylesheet" />
     <link href="_content/MudBlazor/MudBlazor.min.css" rel="stylesheet" />
 </head>
 
