--- a/Solution/ActivityLauncher.Client/wwwroot/index.html
+++ b/Solution/ActivityLauncher.Client/wwwroot/index.html
@@ -9,9 +9,8 @@
     
     <link rel="stylesheet" href="css/app.css" />
     <link rel="stylesheet" href="css/highlight.min.css" />
-    <link rel="stylesheet" href="css/roboto-font.css" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
     <link rel="stylesheet" href="_content/MudBlazor/MudBlazor.min.css" />
-    <link rel="stylesheet" href="ActivityLauncher.Client.styles.css" />
 </head>
 <body>
     <div class="status-bar-safe-area"></div>
